Fix inspector search rendering on iphone

--- a/site/assets/css/site.css
+++ b/site/assets/css/site.css
@@ -308,8 +308,10 @@ ul.side-nav-list ul {
 }
 
 #search-box {
-  padding: .5rem 1rem;
-  margin-bottom: .5rem;
+  position: relative;
+
+  padding: .5rem;
+  margin-bottom: 1rem;
 
   border: 1px solid #ccc;
   border-radius: 3px;
@@ -318,11 +320,14 @@ ul.side-nav-list ul {
 #search-input {
   border: 0;
   outline: 0;
-  width: calc(100% - 30px);
+  width: calc(100% - 40px);
 }
 
 .search-icon {
-  float: right
+  position: absolute;
+
+  top: calc(50% - 8px);
+  right: .5rem;
 }
 
 #search-form {
